<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">GLPAYS</string>
    <string name="dialog_msg">Please Wait...</string>
    <string name="step">Step</string>
    <string name="step_number">1/3</string>
    <string name="register">Registeration</string>
    <string name="register_desc">Enter your mobile number, we will send you</string>
    <string name="otp_text">OTP to verify later</string>
    <string name="login">Login</string>
    <string name="login_desc">Login with your registered</string>
    <string name="login_text">email address and password</string>
    <string name="forget_password">Forgot Password ?</string>
    <string name="step_number_2">2/3</string>
    <string name="verification">Verification</string>
    <string name="enter_no">Enter 6 digit number that sent to</string>
    <string name="number">+91-1234567890</string>
    <string name="splash_text">Banking | Bill Payments | Shopping | Gifts</string>
    <string name="forget_pass">Forgot Password</string>
    <string name="forgot_desc">Enter your registered mobile number, we</string>
    <string name="forgot_text">will send you new password via SMS</string>
    <string name="wallet">Wallet Balance</string>
    <string name="price">$ 0.0</string>
    <string name="fund">+ Fund</string>
    <string name="wallett">Wallet</string>
    <string name="banking_name">Banking</string>
    <string name="scan_pay">Scan &amp; Pay</string>
    <string name="top_up">Top Up</string>
    <string name="promo">Promo</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="email">test@gmail.com</string>
    <string name="statement">Statement</string>
    <string name="add_balance">Add Balance</string>
    <string name="txt_available_balance">Available Balance </string>
    <string name="ammount">Enter Amount</string>
    <string name="add_wallet">Add Wallet Balance</string>
    <string name="balance">Balance</string>
    <string name="account_info">Your Account Info</string>
    <string name="txt_share_accout">Share your account info to receive fund</string>
    <string name="txt_ba_accout_no">VA Bank A/C No.</string>
    <string name="txt_ifcs">IFSC</string>
    <string name="txt_ba_accout_no_">1234567890AABB00</string>
    <string name="txt_ifsc_no">IDFB0020101</string>
    <string name="txt_UPI">UPI</string>
    <string name="txt_UPI_data">NUll</string>
    <string name="ltest_trans">Latest Transaction :</string>
    <string name="recent_transaction">Recent Recharges</string>
    <string name="selected_item">Selected item:</string>
    <string name="wallet_tranfer">Wallet Transfer</string>
    <string name="recent_transactions">Rrecent Transaction</string>
    <string name="enter_no_phone">Enter Mobile Number</string>
    <string name="areyousure">Are you sure want to logout ?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="change_pass">Change Password</string>
    <string name="passcode">Old Password</string>
    <string name="new_passcode">New Password</string>
    <string name="cnf_pass">Confirm Passcode</string>
    <string name="remeber">Remember</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_name">Enter your Name</string>
    <string name="enter_email">Enter your Email</string>
    <string name="dob">Date of brith</string>
    <string name="update">Update Profile</string>
    <string name="txt_add_bank">Add Bank</string>
    <string name="txt_add_bank_details">Add Bank Details</string>
    <string name="submit">Submit</string>
    <string name="bankname">Enter Bank Name</string>
    <string name="branchname">Branch Name</string>
    <string name="ifsc_code">Enter Bank IFSCS Code</string>
    <string name="account_no">Account No.</string>
    <string name="acc_hold_name">Account Holder Name</string>
    <string name="pancard">Enter Pan Card No.</string>
    <string name="adhar">Enter Adhar No.</string>
    <string name="mobile">Enter Mobile No.</string>
    <string name="mobile_demo">1234567890</string>

    <string name="btn_continue">Continue</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="confirm_exit">Confirm Exit ..!!</string>
    <string name="rewards">Rewards</string>
    <string name="Rs">\u20B9</string>
    <string-array name="Gender">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>

    </string-array>

    <string-array name="Sim_operator">
        <item>Select</item>
        <item>JIO</item>
        <item>Idea</item>
        <item>Vodaphone</item>
        <item>Airtel</item>
    </string-array>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">DashBoard</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">Change Password</string>
    <string name="name">Name</string>
    <string name="txtmobile">Mobile Number</string>
    <string name="txtemail">Email ID</string>
    <string name="txtdob">Date of Brith</string>
    <string name="txtgender">Gender</string>
    <string name="menu_addbank">Add Bank</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_kyc">Kyc</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="etfirstname">First Name *</string>
    <string name="etlastname">Last Name *</string>
    <string name="youremail">Your Email *</string>
    <string name="yourmsg">your message...</string>
    <string name="etmobile">Phone number *</string>
    <string name="welcome_intro">Need Better Plan to Start Your Business</string>
    <string name="welcome_intro_2">Glpays focus on Delivering Reliable Value Added Services to Customers in an easiest possible manner which will simplify their utility transactions and requirements. Bringing various common services like Mobile Top-Up/DTH Recharge etc under one roof will significantly reduce the inventory of agents/dealers/retail outlets and also boost their business growth in several ways.</string>
    <string name="menu_aboutus">About Us</string>
    <string name="pancardfront">Pan Card</string>
    <string name="adharcardfront">Adhar/DL/Voter Id Front Update</string>
    <string name="adharcardback">Adhar/DL/Voter Id Back Update</string>
    <string name="passbook">Passbook Update</string>
    <string name="btn_upload">Upload</string>
    <string name="menu_money_transfer">Money Transfer</string>
    <string name="walletammount">545.00</string>
    <string name="bankacnumber">Enter Bank Account No.</string>
    <string name="sendername">Enter Sender Name</string>
    <string name="beneficiarymobile">Beneficiary mobile number (optional)</string>
    <string name="sendermobileno">Enter Sender Mobile No.</string>
    <string name="Beneficiary">Enter Beneficiary</string>
    <string name="menu_dth">DTH Recharge</string>
    <string name="wallet_price">555.00</string>
    <string name="code">Code</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_ammount">Enter Amount</string>
    <string name="menu_prepaid_recharge">Prepaid Recharge</string>
    <string name="menu_welcome_letter">Welcome Letter</string>
    <string name="welcome_letter">We at PAYGL, wish you a very Happy SEASON. We welcome you to our Uniqueforce family for your joining with us. We appreciate your decision taken on the right time in the right perspective. We assure you as being a member of PAYGL that we will try to fulfill your wishes to have financial prosperity and whatever good things in your mind come true. PAYGLbe able to perform more positive works for the society with your dedicated co-operation. We welcome your suggestions to improve OUR OBJECTIVES MISSIONS. Please don’t hesitate to write to us.</string>
    <string name="paygl_email">noreply@paygl.in</string>
    <string name="personal_details">Personal Details :</string>
    <string name="Associate_id">Associate ID :</string>
    <string name="Associate_Name">Associate Name :</string>
    <string name="tvjoining_date">Joining Date :</string>
    <string name="pincode">Pin code :</string>
    <string name="tvaddress">Address :</string>
    <string name="sponserid">Sponser ID :</string>
    <string name="tvsponsername">Sponser Name :</string>
    <string name="tvammount">Amount :</string>
    <string name="tvpackage">Package :</string>
    <string name="menu_add_fund">Add Fund</string>
    <string name="ettransactionid">Enter Transaction Id</string>
    <string name="sucess">Sucess !</string>
    <string name="ok_thank">OK THANKS</string>
    <string name="offers">Offers</string>
    <string name="commission">Commission</string>
    <string name="txt_opening_balance">Opening Balance </string>
    <string name="total_commission">Total Amount</string>
    <string name="txt_fund_balance">Credit Fund</string>
    <string name="txt_commission">Commission</string>
    <string name="menu_summary">Summary</string>
    <string name="user_name">User Name :</string>
    <string name="trans_id">Transaction Id :</string>
    <string name="description">Description :</string>
    <string name="ammountcredit">Amount Credit :</string>
    <string name="ammountdebit">Amount Debit :</string>
    <string name="topcode">Operator Code :</string>
    <string name="decu">Detection :</string>
    <string name="Date">Date :</string>
    <string name="recharge_details">Recharge Details :</string>
    <string name="dth_recharge_details">DTH Recharge Details :</string>
    <string name="menu_commission">Commission</string>
    <string name="fund_details">Fund Details :</string>
    <string name="menu_report">Report</string>


    <string-array name="dth_operator">
        <item>Select Operator</item>
        <item>Airtel DTH</item>
        <item>Dish DTH</item>
        <item>TataSky DTH</item>
        <item>Videocon DTH</item>
    </string-array>


</resources>