<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_latter"
                    android:drawablePadding="5dp"
                    android:ellipsize="start"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/paygl_email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:typeface="sans" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="35dp"
                    android:layout_toRightOf="@+id/tv1"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:background="@color/logo_color"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/view1"
                    android:drawableLeft="@drawable/ic_browser"
                    android:drawablePadding="5dp"
                    android:ellipsize="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/paygl_email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:typeface="sans" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_below="@id/tv1"
                    android:background="@color/gray" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/content_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv1"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:ellipsize="start"
                    android:lineHeight="@dimen/_15sdp"
                    android:text="@string/welcome_letter"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:typeface="sans" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl1"
                android:paddingBottom="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtpd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:ellipsize="start"
                    android:text="@string/personal_details"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:typeface="sans" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtAssociateid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtpd"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/Associate_id"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtAssociateName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtAssociateid"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/Associate_Name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvjoiningdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtAssociateName"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/tvjoining_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvpincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvjoiningdate"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/pincode"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvaddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvpincode"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/tvaddress"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvsponserid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvaddress"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/sponserid"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvsponsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvsponserid"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/tvsponsername"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvammount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvsponsername"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/tvammount"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvpackage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvammount"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/tvpackage"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>