<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_20sdp"
    android:elevation="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_10sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_20sdp">

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:padding="@dimen/_20sdp">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_status"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_sucess" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_status"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:id="@+id/txt_sucess"
                android:text="@string/sucess"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_recharge_staus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl1"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_thanks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_recharge_staus"
            android:layout_marginTop="@dimen/_40sdp"
            android:gravity="center"
            android:text="@string/ok_thank"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/green"
            android:textStyle="bold" />



    </RelativeLayout>

</androidx.cardview.widget.CardView>